<resources>
    <string name="app_name">Smart Pills Dispenser</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">App Settings</string>
    <string name="action_about">About</string>
    <string name="action_logout">Log out</string>

    <string name="menu_home">Home</string>
    <string name="menu_patients">Patients</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_doctors">Doctors</string>
    <string name="menu_setings">Setings</string>
    <string name="schedule">Schedule</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sing_up">Sing up</string>
    <string name="back">Back</string>
    <string name="names_txt">Names</string>
    <string name="birthday_txt">Birthday</string>
    <string name="gender">Gender</string>
    <string name="register_as">Register As</string>
    <string name="phone">Phone</string>
    <string name="repeat_password">Repeat password</string>
    <string name="select_photo">Select photo</string>
    <string name="save">Save</string>
    <string name="clean">Clean</string>
    <string name="email_not_valid">Email not valid</string>
    <string name="error_check_the_fields">"Error, check the fields. "</string>
    <string name="error_check_the_email_entered">"Error, check the email entered. "</string>
    <string name="error_check_the_password">"Error, check the password. "</string>
    <string name="only_carer">Only Carer</string>
    <string name="successful_registration">Successful registration.</string>
    <string name="loading_photo">Loading Photo</string>
    <string name="error_loading_photo">Error loading photo</string>
    <string name="press_again_to_exit">Press again to exit</string>
    <string name="name_label">Names:</string>
    <string name="specialisms">Specialisms:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="email_label">Email:</string>
    <string name="address_label">Address:</string>
    <string name="medicine_label">Medicine:</string>
    <string name="hour">Hour:</string>
    <string name="quantity">Quantity:</string>
    <string name="prescription_label">Prescription:</string>
    <string name="description_label">Description:</string>
    <string name="star_date_label">Star Date:</string>
    <string name="doctor_label">Doctor:</string>
    <string name="gender_label">Gender:</string>
    <string name="birth_date_label">Birth Date:</string>
    <string name="register_device">Register Device</string>
    <string name="code_txt">Code</string>
    <string name="search_button">Search</string>
    <string name="mac">MAC</string>
    <string name="link_button">Link</string>
    <string name="name_txt">Name</string>
    <string name="send_him_a_message_on_whatsapp">Touch a doctor to send him a message on whatsapp</string>
    <string name="select_medicine_label">Select Medicine:</string>
    <string name="you_have_not_selected_any_pill">You have not selected any pill</string>
    <string name="choose">Choose</string>
    <string name="select_date">Select Date</string>
    <string name="select_hour">Select hour</string>
    <string name="you_not_have_selected_none_hour_and_date">You not have selected none hour and date</string>
    <string name="quantity_txt">Quantity</string>
    <string name="save_dosage_button">Save Dosage</string>
    <string name="welcome_to_app_smart_pills_dispenser">Welcome to App Smart Pills Dispenser</string>
    <string name="this_application_has_the_functionality_to_manage_">This application has the functionality to manage the list of patients that a carer has to assign dosages in the pill dispenser, it will allow patients, doctors, treatments, pills to be administered and, most importantly, to assign dosages at a specified time.</string>
    <string name="now_you_can_manage_your_patients_by_pressing_the_button">Now you can manage your patients by pressing the button:</string>
    <string name="view_patients_button">View Patients</string>
    <string name="coming_out_label">Coming out</string>
    <string name="start_date">Start date</string>
    <string name="select_doctor">Select doctor:</string>
    <string name="you_have_not_selected_any_doctor">You have not selected any doctor</string>
    <string name="save_treatment_and_add_dosege">Save Treatment and add dosege</string>
    <string name="patient_label_menu">PATIENT:</string>
    <string name="medical_treatment_label_menu">Medical treatment</string>
    <string name="schedule_label_menu">Schedule</string>
    <string name="reports_label_menu">Reports</string>
    <string name="settings_label_menu">Settings</string>
    <string name="profile_label">Profile</string>
    <string name="link_device_label">Link Device</string>
    <string name="help_label">Help</string>
    <string name="select_for_generate_a_report">Select for generate a report</string>
    <string name="treatments_button">Treatments</string>
    <string name="dosages_button">Dosages</string>
    <string name="date_schedule">Date</string>
    <string name="hour_schedule">Hour</string>
    <string name="medicine_schedule">Medicine</string>
    <string name="quantity_schedule">Quantity</string>
    <string name="closed_session">Closed session</string>
    <string name="log_out">Log Out</string>
    <string name="patient_registration_label">Patient Registration</string>
    <string name="menu_patient_label">Menu Patient</string>
    <string name="medicines_label">Medicines</string>
    <string name="medicine_registration_label">Medicine Registration</string>
    <string name="medical_treatment_label">Medical Treatment</string>
    <string name="treatment_registration_label">Treatment Registration</string>
    <string name="doctors_label">Doctors</string>
    <string name="dosage_registration_label">Dosage Registration</string>
    <string name="doctor_registration_label">Doctor Registration</string>
    <string name="reports_of_patient_label">Reports of patient</string>
    <string name="schedule_of_patient_label">Schedule of patient</string>
    <string name="link_device_label_procedure">Link Device</string>
    <string name="whatsapp_is_not_installed">Whatsapp is not installed!</string>
    <string name="hi_doctor">"Hi doctor "</string>
    <string name="i_write_to_you_by">" I write to you by"</string>
    <string name="female_recyclerview">Femelale</string>
    <string name="male_recyclerview">Male </string>
    <string name="non_binary_recyclerview">Non binary</string>
    <string name="dosages_label">Dosages</string>
    <string name="logout_label">Logout</string>
</resources>