<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_patients"
            android:icon="@drawable/ic_patient"
            android:title="@string/menu_patients" />
        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/ic_alert"
            android:title="@string/menu_alerts" />
        <item
            android:id="@+id/nav_doctors"
            android:icon="@drawable/ic_doctor"
            android:title="@string/menu_doctors" />

    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="Controls">
        <menu>
            <item
                android:id="@+id/nav_setings"
                android:icon="@drawable/ic_setings"
                android:title="@string/menu_setings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout2"
                android:title="@string/log_out"/>
        </menu>
    </item>

</menu>