<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.uteq.app_smart_pills_dispenser.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_patients"
        android:name="com.uteq.app_smart_pills_dispenser.ui.patients.GalleryFragment"
        android:label="@string/menu_patients"
        tools:layout="@layout/fragment_gallery" />
    <fragment
        android:id="@+id/nav_alerts"
        android:name="com.uteq.app_smart_pills_dispenser.ui.alerts.SlideshowFragment"
        android:label="@string/menu_alerts"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_setings"
        android:name="com.uteq.app_smart_pills_dispenser.ui.setings.SetingsFragment"
        android:label="@string/menu_setings"
        tools:layout="@layout/fragment_setings" />
</navigation>