<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dosages.DosageAddFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="100px">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="125dp"
                android:layout_height="50px"
                android:layout_marginTop="40dp"
                android:text="@string/select_medicine_label"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSelectPill"
                android:layout_width="175dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="#4BAEFD"
                android:text="@string/choose" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvNameSelectedPill"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/you_have_not_selected_any_pill"
            android:textAlignment="center"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:gravity="top"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSelectDateDosage"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:backgroundTint="#4BAEFD"
                android:text="@string/select_date" />

            <View
                android:layout_width="40dp"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/btnSelectHourDosage"
                android:layout_width="wrap_content"
                android:layout_height="50dp"

                android:backgroundTint="#4BAEFD"
                android:text="@string/select_hour" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDateHourSelectedDosage"
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/you_not_have_selected_none_hour_and_date"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvTreamentCode"
            android:layout_width="match_parent"
            android:layout_height="50px"
            android:gravity="end"
            android:text="Aqui va el codigo"
            android:textStyle="bold"
            android:visibility="invisible" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:startIconDrawable="@drawable/baseline_border_color_24"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPrescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="Prescription"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:startIconDrawable="@drawable/baseline_app_registration_24"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDosageQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/quantity_txt"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnSaveDosage"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/save_dosage_button" />

    </LinearLayout>


</RelativeLayout>