<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.device.DiviceAddFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_device"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:startIconDrawable="@drawable/baseline_airline_seat_individual_suite_24"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_code_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/code_txt"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnDeviceSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/search_button"
        app:iconifiedByDefault="false"
        app:queryHint="Search" />

</LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:startIconDrawable="@drawable/baseline_app_registration_24"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_description_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/name_txt"
                android:enabled="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:startIconDrawable="@drawable/baseline_app_registration_24"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_mac_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/mac"
                android:enabled="false"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLinkDevice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_margin="100dp"
            android:text="@string/link_button"
            android:visibility="invisible"
            app:iconifiedByDefault="false"
            app:queryHint="Escanear" />

    </LinearLayout>

</FrameLayout>