<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/constraintLayout"
        android:layout_width="382dp"
        android:layout_height="317dp"
        android:layout_margin="12dp"
        android:background="@drawable/background_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="355dp"
            android:layout_height="228dp"
            android:src="@drawable/ic_home_introduction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/welcome_to_app_smart_pills_dispenser"
            android:textAlignment="center"
            android:textColor="#100F0F"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="309dp"
        android:layout_height="184dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/this_application_has_the_functionality_to_manage_"
        android:textAlignment="center"
        android:textColor="#090909"
        android:background="@drawable/border_home"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="298dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/now_you_can_manage_your_patients_by_pressing_the_button"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnViewPatients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_patients_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>