<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dosages.DosageAddFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="100px">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:startIconDrawable="@drawable/baseline_assignment_ind_24"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDoctorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/names_txt"

                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:startIconDrawable="@drawable/baseline_card_travel_24"
            app:endIconMode="clear_text">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDoctorSpecialism"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="Specialism"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50px"
            android:text="Phone number"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal">

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCodeDoctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                app:ccp_defaultNameCode="EC"
                app:ccp_showPhoneCode="true"
                app:ccp_showNameCode="false"
                />

            <EditText
                android:id="@+id/txtDoctorPhoneNumber"
                android:layout_width="197dp"
                android:layout_height="69dp" />
        </LinearLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/baseline_alternate_email_24"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDoctorEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/email"

                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/baseline_add_location_24"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtDoctoDirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="Address"

                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSaveDosage"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="80dp"
            android:text="@string/save" />

    </LinearLayout>


</RelativeLayout>